MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/SalesOrderInstallments__c.object-meta.xml
<CustomObject>
    <label>Sales Order Installment</label>
    <nameField>
        <displayFormat>SOI-{00000}</displayFormat>
        <label>Sales Order Installment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SalesOrderInstallments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>