MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/Amount_in_words__c.field-meta.xml
<CustomField>
    <fullName>Amount_in_words__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Amount in words</label>
    <length>255</length>
    <type>Text</type>
</CustomField>