MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/Amount_in_words_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Amount_in_words_Arabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Amount in words Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>