MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/Assigned_Collections_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Collections_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Collections Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SalesOrderInstallments</relationshipName>
    <type>Lookup</type>
</CustomField>