MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/BrokerPayout__c.field-meta.xml
<CustomField>
    <fullName>BrokerPayout__c</fullName>
    <label>Broker Payout %</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>