MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/Collection_Team_Comments__c.field-meta.xml
<CustomField>
    <fullName>Collection_Team_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Collection Team Comments</label>
    <type>TextArea</type>
</CustomField>