MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/Customer_Solution__c.field-meta.xml
<CustomField>
    <fullName>Customer_Solution__c</fullName>
    <label>Customer Solution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Extension  In Progress</fullName>
            </value>
            <value>
                <fullName>Property Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>