MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/Default_and_Termination_SR__c.field-meta.xml
<CustomField>
    <fullName>Default_and_Termination_SR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default and Termination SR</label>
    <referenceTo>Business_Process__c</referenceTo>
    <relationshipLabel>SalesOrderInstallments (Default and Termination SR)</relationshipLabel>
    <relationshipName>SalesOrderInstallments1</relationshipName>
    <type>Lookup</type>
</CustomField>