MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/Default_Notice_2_Sent__c.field-meta.xml
<CustomField>
    <fullName>Default_Notice_2_Sent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Default Notice 2 Sent</label>
    <type>DateTime</type>
</CustomField>