MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/Exclude_Default_Comments__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Default_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exclude Default Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>