MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/Exclude_from_Default__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Default__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from Default</label>
    <type>Checkbox</type>
</CustomField>