MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/Exclude_LPC__c.field-meta.xml
<CustomField>
    <fullName>Exclude_LPC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude LPC</label>
    <type>Checkbox</type>
</CustomField>