MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/ExtensionDate__c.field-meta.xml
<CustomField>
    <fullName>ExtensionDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Extension Date</label>
    <type>Date</type>
</CustomField>