MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/Installment_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Installment_Amount_USD__c</fullName>
    <formula>InstallmentAmount__c / 3.65</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installment Amount USD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>