MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/Installment_Type__c.field-meta.xml
<CustomField>
    <fullName>Installment_Type__c</fullName>
    <formula>IF( MilestoneNumber__c == 1, &quot;Down Payment&quot;,&quot;Milestone&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Installment Type</label>
    <type>Text</type>
</CustomField>