MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/InstallmentAmount__c.field-meta.xml
<CustomField>
    <fullName>InstallmentAmount__c</fullName>
    <label>Installment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>