MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/Instalment_Number__c.field-meta.xml
<CustomField>
    <fullName>Instalment_Number__c</fullName>
    <formula>PaymentInstallments__r.InstalmentNumber__c</formula>
    <label>Instalment Number</label>
    <type>Text</type>
</CustomField>