MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/InstalmentPaymentDueDateArabic__c.field-meta.xml
<CustomField>
    <fullName>InstalmentPaymentDueDateArabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Instalment Payment Due Date Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>