MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/InstalmentPaymentDueDateArabicSPA__c.field-meta.xml
<CustomField>
    <fullName>InstalmentPaymentDueDateArabicSPA__c</fullName>
    <formula>if(ISBLANK(InstalmentPaymentDueDateArabic__c), PaymentInstallments__r.InstalmentPaymentDueDateArabic__c, InstalmentPaymentDueDateArabic__c)


/*IF(MilestoneDescription__c == &apos;Down Payment&apos;,
			&apos;مستحق الدفع بتاريخ الحجز والكائن في&apos;
			&amp;&quot; &quot;&amp; 
			TEXT(DAY(DATEVALUE(SalesOrder__r.CreatedDate))) 
			&amp;&quot; من شهر &quot;&amp; 
			CASE( TEXT(MONTH(DATEVALUE(SalesOrder__r.CreatedDate))), 
				&apos;1&apos;,&apos;يناير&apos;,
				&apos;2&apos;,&apos;شه فبراير&apos;,
				&apos;3&apos;,&apos;مارس&apos;,
				&apos;4&apos;,&apos;أبريل&apos;,
				&apos;5&apos;,&apos;يمكن&apos;,
				&apos;6&apos;,&apos;يونيو&apos;,
				&apos;7&apos;,&apos;يوليو&apos;,
				&apos;8&apos;,&apos;أغسطس&apos;,
				&apos;9&apos;,&apos;سبتمبر&apos;,
				&apos;10&apos;,&apos;اكتوبر&apos;,
				&apos;11&apos;,&apos;شهر نوفمبر&apos;,
				&apos;12&apos;,&apos;ديسمبر&apos;,&apos;&apos;)
			&amp;&quot; &quot;&amp; 
			TEXT( YEAR(DATEVALUE(SalesOrder__r.CreatedDate))),
			IF(MilestoneDescription__c == &apos;At Completion&apos;,&apos;عند الانتهاء&apos;,&apos;مستحق الدفع بتاريخ&apos;))  
			&amp;&quot; &quot;&amp;
			IF( AND (MilestoneDescription__c &lt;&gt; &apos;Down Payment&apos;, MilestoneDescription__c &lt;&gt; &apos;At Completion&apos;), TEXT( DAY( PaymentInstallments__r.SPA_Instalment_Date__c )) &amp;&quot; &quot;&amp;
				CASE( TEXT(MONTH(PaymentInstallments__r.SPA_Instalment_Date__c)),
					&apos;1&apos;,&apos;يناير&apos;,
					&apos;2&apos;,&apos; شه فبراير&apos;,
					&apos;3&apos;,&apos;مارس&apos;,
					&apos;4&apos;,&apos;أبريل&apos;,
					&apos;5&apos;,&apos;يمكن&apos;,
					&apos;6&apos;,&apos;يونيو&apos;,
					&apos;7&apos;,&apos;يوليو&apos;,
					&apos;8&apos;,&apos;أغسطس&apos;,
					&apos;9&apos;,&apos;سبتمبر&apos;,
					&apos;10&apos;,&apos;اكتوبر&apos;,
					&apos;11&apos;,&apos;شهر نوفمبر&apos;,
					&apos;12&apos;,&apos;ديسمبر&apos;,&apos;&apos;) &amp;&quot; &quot;&amp; TEXT( YEAR(PaymentInstallments__r.SPA_Instalment_Date__c)) &amp;&quot; &quot;&amp; &apos;أو قبله&apos;,&apos;&apos;)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instalment Payment Due Date Arabic SPA</label>
    <type>Text</type>
</CustomField>