MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/InstalmentPaymentDueDateSPA__c.field-meta.xml
<CustomField>
    <fullName>InstalmentPaymentDueDateSPA__c</fullName>
    <formula>if(ISBLANK(InstalmentPaymentDueDateArabic__c), PaymentInstallments__r.InstalmentPaymentDueDate__c, InstalmentPaymentDueDate__c)</formula>
    <label>Instalment Payment Due Date SPA</label>
    <type>Text</type>
</CustomField>