MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/IsHandoverPayment__c.field-meta.xml
<CustomField>
    <fullName>IsHandoverPayment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Handover Payment</label>
    <type>Checkbox</type>
</CustomField>