MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/IsSuperseded__c.field-meta.xml
<CustomField>
    <fullName>IsSuperseded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSuperseded</label>
    <type>Checkbox</type>
</CustomField>