MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/LastLPCChargedDate__c.field-meta.xml
<CustomField>
    <fullName>LastLPCChargedDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LastLPCChargedDate</label>
    <type>Date</type>
</CustomField>