MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/Latest_Interaction_Comments__c.field-meta.xml
<CustomField>
    <fullName>Latest_Interaction_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Latest Interaction Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>