MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/LatestLPCChargedAmt__c.field-meta.xml
<CustomField>
    <fullName>LatestLPCChargedAmt__c</fullName>
    <label>LatestLPCChargedAmt</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>