MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/LPC_Charge__c.field-meta.xml
<CustomField>
    <fullName>LPC_Charge__c</fullName>
    <label>LPC Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>