MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/LPC_Freeze_End_Date__c.field-meta.xml
<CustomField>
    <fullName>LPC_Freeze_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LPC Freeze End Date</label>
    <type>Date</type>
</CustomField>