MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/LPCActive__c.field-meta.xml
<CustomField>
    <fullName>LPCActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LPCActive</label>
    <type>Checkbox</type>
</CustomField>