MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/Mile_Stone_Readiness_SR__c.field-meta.xml
<CustomField>
    <fullName>Mile_Stone_Readiness_SR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mile Stone Readiness SR</label>
    <referenceTo>Business_Process__c</referenceTo>
    <relationshipLabel>SalesOrderInstallments</relationshipLabel>
    <relationshipName>SalesOrderInstallments</relationshipName>
    <type>Lookup</type>
</CustomField>