MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/Milestone_Description_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Description_Arabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Milestone Description Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>