MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/Milestone_Due_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Due_Date_Text__c</fullName>
    <description>This field contains the milestone date in a text format for reservation form</description>
    <formula>IF(MilestoneNumber__c == 1,
&apos;Payable on the Reservation Date&apos;,
&apos;Payable on or before&apos;
&amp;&quot; &quot;&amp;
TEXT( DAY(MilestoneDate__c) ) &amp;&quot; &quot;&amp;
CASE( TEXT( MONTH(MilestoneDate__c) ),
&apos;1&apos;,&apos;January&apos;,
&apos;2&apos;,&apos;February&apos;,
&apos;3&apos;,&apos;March&apos;,
&apos;4&apos;,&apos;April&apos;,
&apos;5&apos;,&apos;May&apos;,
&apos;6&apos;,&apos;June&apos;,
&apos;7&apos;,&apos;July&apos;,
&apos;8&apos;,&apos;August&apos;,
&apos;9&apos;,&apos;September&apos;,
&apos;10&apos;,&apos;October&apos;,
&apos;11&apos;,&apos;November&apos;,
&apos;12&apos;,&apos;December&apos;,&apos;&apos;) &amp;&quot; &quot;&amp;
TEXT( YEAR(MilestoneDate__c)))</formula>
    <label>Milestone Due Date Text</label>
    <type>Text</type>
</CustomField>