MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/Milestone_Egypt_Percent__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Egypt_Percent__c</fullName>
    <label>Milestone %</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Percent</type>
</CustomField>