MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/Milestone_Egypt_Percent_Rounded__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Egypt_Percent_Rounded__c</fullName>
    <formula>ROUND( Milestone_Egypt_Percent__c ,3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>