MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/Milestone_Name__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Name__c</fullName>
    <formula>SalesOrder__r.Unit__r.Name&amp;&apos;|&apos;&amp;SalesOrder__r.Unit__r.Project_Name__c&amp;&apos;|&apos;&amp;&apos;Milestone-&apos;&amp;TEXT(ROUND(MilestoneNumber__c, 0))&amp;&apos;|&apos;&amp; MilestoneDescription__c&amp;&apos; &apos;+TEXT(Milestone__c*100)&amp;&apos;%&apos;</formula>
    <label>Milestone Name</label>
    <type>Text</type>
</CustomField>