MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/MilestoneDate__c.field-meta.xml
<CustomField>
    <fullName>MilestoneDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Milestone Date</label>
    <type>Date</type>
</CustomField>