MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/MilestoneDescriptionArabicSPA__c.field-meta.xml
<CustomField>
    <fullName>MilestoneDescriptionArabicSPA__c</fullName>
    <formula>IF(ISBLANK(MilestoneDescriptionArabic__c), PaymentInstallments__r.MilestoneDescriptionArabic__c , MilestoneDescriptionArabic__c)

/*IF(MilestoneDescription__c == &apos;Down Payment&apos;,&apos;دفعة مبدئية&apos;,
IF(MilestoneDescription__c == &apos;Progress of 50% of the Enabling Works&apos;,&apos;تقدم بنسبة 50% من الأعمال التمكينية&apos;,
IF(OR(MilestoneDescription__c == &apos;Commencement of Construction Villas of&apos;,MilestoneNumber__c == 3),&apos;البدء في بناء فلل&apos;,
IF(MilestoneDescription__c == &apos;25% of Foundation works of the Project&apos;,&apos;25% من أعمال الأساسات للمشروع&apos;,
IF(MilestoneDescription__c == &apos;20% of Structural works of the Project&apos;,&apos;20% من الأعمال الإنشائية للمشروع&apos;,
IF(MilestoneDescription__c == &apos;50% of Structural works of the Project&apos;,&apos;50% من الأعمال الإنشائية للمشروع&apos;,
IF(MilestoneDescription__c == &apos;Façade Substantial Completion for the Project&apos;,&apos;الواجهة تم الانتهاء منها بشكل كبير للمشروع&apos;,
IF(MilestoneDescription__c == &apos;At Completion&apos;,&apos;عند الانتهاء&apos;,&apos;&apos;))))))))*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone Description Arabic SPA</label>
    <type>Text</type>
</CustomField>