MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/MilestoneDescriptionSPA__c.field-meta.xml
<CustomField>
    <fullName>MilestoneDescriptionSPA__c</fullName>
    <formula>IF(ISBLANK(MilestoneDescriptionArabic__c), PaymentInstallments__r.MilestoneDescription__c , MilestoneDescription__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone Description SPA</label>
    <type>Text</type>
</CustomField>