MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/MilestoneNumber__c.field-meta.xml
<CustomField>
    <fullName>MilestoneNumber__c</fullName>
    <label>Milestone Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>