MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/Over_Due_Days__c.field-meta.xml
<CustomField>
    <fullName>Over_Due_Days__c</fullName>
    <formula>IF(TODAY() &gt; MilestoneDate__c , TODAY() -  MilestoneDate__c , 0)</formula>
    <label>Over Due Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>