MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/Overdue_Bucket__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Bucket__c</fullName>
    <formula>IF(
  Instalment_Overdue_Days__c &gt; 0,
  IF(
    Instalment_Overdue_Days__c &lt;= 30, 
    &apos;1. 0–30 Days&apos;,
    IF(
      Instalment_Overdue_Days__c &lt;= 60, 
      &apos;2. 30–60 Days&apos;,
      IF(
        Instalment_Overdue_Days__c &lt;= 90, 
        &apos;3. 60–90 Days&apos;,
        IF(Instalment_Overdue_Days__c &lt;= 180, 
        &apos;4. 90-180 Days&apos;,
        &apos;5. 180 Days Plus&apos;
       )
      )
    )
  ),
  &apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overdue Bucket</label>
    <type>Text</type>
</CustomField>