MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/Overdue_Days__c.field-meta.xml
<CustomField>
    <fullName>Overdue_Days__c</fullName>
    <description>Returns number of days overdue based on MilestoneDate__c. Returns 0 if date is blank or in the future.</description>
    <formula>IF(
  ISBLANK(MilestoneDate__c),
  0,
  IF(
    TODAY() &gt; MilestoneDate__c,
    TODAY() - MilestoneDate__c,
    0
  )
)</formula>
    <label>Overdue Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>