MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/Payment_Confirmation_Process__c.field-meta.xml
<CustomField>
    <fullName>Payment_Confirmation_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Confirmation Process</label>
    <referenceTo>Business_Process__c</referenceTo>
    <relationshipLabel>SalesOrderInstallments (Payment Confirmation Process)</relationshipLabel>
    <relationshipName>SalesOrderInstallments2</relationshipName>
    <type>Lookup</type>
</CustomField>