MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/Payment_Readiness__c.field-meta.xml
<CustomField>
    <fullName>Payment_Readiness__c</fullName>
    <label>Payment Readiness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>