MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/Payment_Readiness_Comments__c.field-meta.xml
<CustomField>
    <fullName>Payment_Readiness_Comments__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Readiness Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>