MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/PaymentInstallments__c.field-meta.xml
<CustomField>
    <fullName>PaymentInstallments__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Installments</label>
    <referenceTo>PaymentInstallements__c</referenceTo>
    <relationshipLabel>Sales Order Installments</relationshipLabel>
    <relationshipName>Sales_Order_Installments</relationshipName>
    <type>Lookup</type>
</CustomField>