MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/Reminder_3_Sent__c.field-meta.xml
<CustomField>
    <fullName>Reminder_3_Sent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reminder 3 Sent</label>
    <type>DateTime</type>
</CustomField>