MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/ReminderDueDate__c.field-meta.xml
<CustomField>
    <fullName>ReminderDueDate__c</fullName>
    <formula>IF(
	NOT(ISBLANK(ExtensionDate__c)),ExtensionDate__c,
	IF(
		NOT(ISBLANK(Milestone_Installment__c)) &amp;&amp; NOT(ISBLANK(Milestone_Installment__r.ConfirmedMilestoneDate__c)),
		Milestone_Installment__r.ConfirmedMilestoneDate__c,
		IF(
			ISBLANK(Milestone_Installment__c),
			MilestoneDate__c,
			null
		)
	)
)</formula>
    <label>Reminder Due Date</label>
    <type>Date</type>
</CustomField>