MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/ReminderType__c.field-meta.xml
<CustomField>
    <fullName>ReminderType__c</fullName>
    <formula>IF(DueFilterDays__c = -30 , &apos;30 days Prior&apos;,
	IF(DueFilterDays__c = -15, &apos;15 Days Prior&apos;,
		IF(DueFilterDays__c = -7, &apos;7 Days Prior&apos;,
                            IF(DueFilterDays__c = -1, &apos;1 Day Prior&apos;,
			IF(DueFilterDays__c &lt; -30,&apos;More than 30 days Prior&apos;,
				IF(DueFilterDays__c &gt;= 0,&apos;More than 1 days Over Due&apos;,
					IF(DueFilterDays__c &lt; 0 &amp;&amp; DueFilterDays__c &gt; -7,&apos;More than 1 day to 6 days Prior&apos;,
						IF(DueFilterDays__c &lt; -15 &amp;&amp; DueFilterDays__c &gt; -7,&apos;More than 8 day to 14 days Prior&apos;,&apos;&apos;)
					)
				)
			)
                   )
		)
	)
)</formula>
    <label>Reminder Type</label>
    <type>Text</type>
</CustomField>