MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/SalesAgentPayout__c.field-meta.xml
<CustomField>
    <fullName>SalesAgentPayout__c</fullName>
    <label>Sales Agent Payout %</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>