MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/SalesOrder__c.field-meta.xml
<CustomField>
    <fullName>SalesOrder__c</fullName>
    <label>Sales Order</label>
    <referenceTo>SalesOrder__c</referenceTo>
    <relationshipLabel>Sales Order Installments</relationshipLabel>
    <relationshipName>Sales_Order_Installments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>