MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/SO_Oracle_Party_Id__c.field-meta.xml
<CustomField>
    <fullName>SO_Oracle_Party_Id__c</fullName>
    <formula>SalesOrder__r.OraclePartyId__c</formula>
    <label>SO Oracle Party Id</label>
    <type>Text</type>
</CustomField>