MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/SPA_Milestone_Date__c.field-meta.xml
<CustomField>
    <fullName>SPA_Milestone_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SPA Milestone Date</label>
    <type>Date</type>
</CustomField>