MODON MRE BPDEV/force-app/main/default/objects/SalesOrderInstallments__c/fields/SPAINFRA__c.field-meta.xml
<CustomField>
    <fullName>SPAINFRA__c</fullName>
    <formula>IF(
  MilestoneNumber__c == 1,
  &apos;Down Payment الدفعة المقدمة&apos;,
  IF(
    MilestoneNumber__c == 2,
  &apos;Commencement of Infrastructure works الانتهاء من أعمال تجهيز الموقع&apos;,
  IF(
    MilestoneNumber__c == 3,
    &apos;Commencement of Construction Villas of البدء في بناء الفلل&apos;,
  IF(
    MilestoneNumber__c == 4,
    &apos;50% of Foundation works of the Project 50% من أعمال الأساسات لوحدات الفلل&apos;,	
  IF(
    MilestoneNumber__c == 5,
    &apos;50% of Structural works of the Project 50% من الأعمال الإنشائية لوحدات الفلل&apos;,	
  IF(
    MilestoneNumber__c == 6,
    &apos;100% of Structural works of the Project 100% من الأعمال الإنشائية لوحدات الفلل&apos;,	
  IF(
    MilestoneNumber__c == 7,
    &apos;Façade Substantial Completion for the Project اكتمال الواجهة الخارجية لوحدات الفلل&apos;,
  IF(
    MilestoneNumber__c == 8, &apos;At Completion عند الانتهاء&apos;,&apos;&apos;
))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPA_Infra</label>
    <type>Text</type>
</CustomField>